--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,10 @@
       "ES2022",
       "dom"
     ],
+    "baseUrl": "./",
+    "paths": {
+      
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
